Bug 437654 - Holidays plugin does not dynamically re-populate the calendar when holiday list changes; needs to be disabled and re-enabled
Summary: Holidays plugin does not dynamically re-populate the calendar when holiday li...
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Digital Clock widget (other bugs)
Version First Reported In: 5.27.4
Platform: openSUSE Linux
: NOR normal
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-05-25 11:41 UTC by medin
Modified: 2023-05-27 01:18 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.27.6
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description medin 2021-05-25 11:41:54 UTC
In Digital Clock Settings dialog, in Holidays tab if you add or remove a Holiday source, then click apply the calendar doesn't update itself to show new holidays. It works only if you disabled Holidays in Calendar tab then re-enabled it again.

Operating System: Manjaro Linux
KDE Plasma Version: 5.21.5
KDE Frameworks Version: 5.82.0
Qt Version: 5.15.2
Kernel Version: 5.4.118-1-MANJARO
OS Type: 64-bit
Graphics Platform: X11
Comment 1 Nate Graham 2021-05-26 19:08:06 UTC
Can reproduce.
Comment 3 Fushan Wen 2023-05-26 12:11:41 UTC
Git commit bdbf04207fed6f88a041a76c5797cf51272a72ee by Fushan Wen.
Committed on 26/05/2023 at 12:11.
Pushed by fusionfuture into branch 'Plasma/5.27'.

holidaysevents: reload event data when config changes

This fixes holiday events not being listed immediately after user
changes the config.
FIXED-IN: 5.27.6

M  +34   -14   plasmacalendarintegration/holidaysevents.cpp
M  +4    -0    plasmacalendarintegration/holidaysevents.h
M  +1    -1    plasmacalendarintegration/qmlhelper/holidayeventshelperplugin.cpp

https://invent.kde.org/plasma/plasma-workspace/-/commit/bdbf04207fed6f88a041a76c5797cf51272a72ee
Comment 4 Fushan Wen 2023-05-27 01:18:38 UTC
Git commit 675418e3082afc1df499a1c7b642673536a356ce by Fushan Wen.
Committed on 27/05/2023 at 01:18.
Pushed by fusionfuture into branch 'master'.

holidaysevents: reload event data when config changes

This fixes holiday events not being listed immediately after user
changes the config.
FIXED-IN: 5.27.6


(cherry picked from commit bdbf04207fed6f88a041a76c5797cf51272a72ee)

M  +34   -14   plasmacalendarintegration/holidaysevents.cpp
M  +4    -0    plasmacalendarintegration/holidaysevents.h
M  +1    -1    plasmacalendarintegration/qmlhelper/holidayeventshelperplugin.cpp

https://invent.kde.org/plasma/plasma-workspace/-/commit/675418e3082afc1df499a1c7b642673536a356ce