holidaysevents: reload event data when config changes

This fixes holiday events not being listed immediately after user
changes the config.

BUG: 437654
FIXED-IN: 5.27.6